# ckanext-resource_indexer

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  fallback-requirement.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini  textract-1.6.3-cp27-none-any.whl
.github/workflows/: test.yml
ckanext/resource_indexer/: cli.py  config.py  exc.py  interface.py  plugin.py  util.py  utils.py
ckanext/resource_indexer/tests/: conftest.py  test_plugin.py  test_utils.py
