[metadata]
name = ckanext-resource_indexer
version = 0.1.3
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/ckanext-resource_indexer
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
                 ckantoolkit
                 six
include_package_data = True

[options.extras_require]
pdf =
    pdftotext

all =
    %(pdf)s

test =
     pytest-ckan
     pytest-factoryboy

[options.entry_points]
ckan.plugins =
             resource_indexer = ckanext.resource_indexer.plugin:ResourceIndexerPlugin
             pdf_resource_indexer = ckanext.resource_indexer.plugin:PdfResourceIndexerPlugin
             plain_resource_indexer = ckanext.resource_indexer.plugin:PlainResourceIndexerPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = i18n/ckanext-resource_indexer.pot
width = 80

[init_catalog]
domain = ckanext-resource_indexer
input_file = i18n/ckanext-resource_indexer.pot
output_dir = i18n

[update_catalog]
domain = ckanext-resource_indexer
input_file = i18n/ckanext-resource_indexer.pot
output_dir = i18n
previous = true

[compile_catalog]
domain = ckanext-resource_indexer
directory = i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning

addopts = --ckan-ini test.ini
